--- a/src/main/resources/config/secret.yaml
+++ b/src/main/resources/config/secret.yaml
@@ -14,9 +14,9 @@ spring:
     init:
       mode: always
   datasource:
-    url: jdbc:mysql://localhost:3306/dongnaeFit
+    url: jdbc:mysql://dongnaefit-db.c78gaoqkcicz.ap-northeast-2.rds.amazonaws.com:3306/dongnaefit_DB
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
+    username: younjeong
     password: dbswjd6654
   jpa:
     defer-datasource-initialization: true
