--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=dongnae-fit
 kakao.key.client-id=c4466ede44fd01c7de0788a9d99cf576
-kakao.redirect-uri=http://localhost:3000/member/kakao
+#kakao.redirect-uri=http://localhost:3000/member/kakao
+kakao.redirect-uri=http://localhost:5173/auth
 spring.config.import=classpath:/config/secret.yaml
