--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ out/
 .vscode/
 
 !**/src/main/resources/config/
-/src/main/resources/config/**
+/src/main/resources/config/**src/main/resources/config/secret.yaml
