--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=dongnae-fit
 server.port=8083
 kakao.key.client-id=c4466ede44fd01c7de0788a9d99cf576
 #kakao.redirect-uri=http://3.37.33.20/auth
-kakao.redirect-uri=http://localhost:5173/auth
+#kakao.redirect-uri=http://localhost:5173/auth
+kakao.redirect-uri=https://dongnae-fit.site/auth
 spring.config.import=classpath:/config/secret.yaml
